--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "url": "https://github.com/mark-halls/game-of-life-data/issues"
   },
   "homepage": "https://github.com/mark-halls/game-of-life-data#readme",
-  "dependencies": {},
+  "dependencies": {
+    "@types/seedrandom": "^2.4.28",
+    "seedrandom": "^3.0.5"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "jest": "^26.6.3",
