--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "jest": "^26.6.3",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
